--- a/resources/css/_base.scss
+++ b/resources/css/_base.scss
@@ -134,6 +134,7 @@ body.dark {
 
     footer {
         justify-content: center  !important;
+        margin-top: 2rem !important;
 
         p {
             text-align: center;
