--- a/resources/css/IndexPage/_BottomArea.scss
+++ b/resources/css/IndexPage/_BottomArea.scss
@@ -120,7 +120,7 @@
                     table {
                         width: 100%;
                         border-collapse: collapse;
-                        font-size: 1.8rem;
+                        font-size: 2rem;
                         font-weight: 500;
                         color: #000000;
 
@@ -275,7 +275,7 @@
                     flex-wrap: wrap;
 
                     .singleItem {
-                        width: 31%;
+                        width: 32.5%;
                         padding: 1rem;
                         background-color: #fff;
                         display: flex;
@@ -299,8 +299,8 @@
                             justify-content: space-around;
 
                             h3 {
-                                font-weight: 700;
-                                font-size: 2.4rem;
+                                font-weight: 400;
+                                font-size: 1.8rem;
                                 color: rgb(0, 0, 0);
                             }
 
@@ -821,17 +821,17 @@
 
                                     img {
                                         width: 5rem;
-                                        margin-right: .9rem;
+                                        margin-right: .2rem;
                                     }
 
                                     img.small {
-                                        width: 2.8rem;
-                                        margin-right: 0.7rem;
+                                        width: 2.2rem;
+                                        margin-right: 0.5rem;
                                     }
 
                                     .arrow {
-                                        width: 2.8rem;
-                                        margin-right: 0.6rem;
+                                        width: 2rem;
+                                        margin-right: 0.4rem;
                                     }
 
                                     span {
@@ -957,11 +957,10 @@
                     flex-wrap: wrap;
 
                     .singleItem {
-
                         background-color: rgba(28, 29, 35, 1);
 
                         img {
-                            margin-right: 2rem;
+                            margin-right: 1rem;
 
                         }
 
@@ -1424,7 +1423,7 @@
                                 td {
                                     padding: 1.5rem .2rem;
                                     text-align: center;
-                                    font-size: 1.5rem;
+                                    font-size: 1.6rem;
 
                                     div {
                                         display: flex;
@@ -1448,7 +1447,7 @@
 
                                         span {
                                             font-weight: 500;
-                                            font-size: 1.3rem;
+                                            font-size: 1.5rem;
                                         }
 
                                     }
@@ -1462,7 +1461,7 @@
                                         -moz-border-radius: .3rem;
                                         -ms-border-radius: .3rem;
                                         -o-border-radius: .3rem;
-                                        font-size: 1.3rem;
+                                        font-size: 1.5rem;
                                     }
                                 }
                             }
@@ -1473,6 +1472,8 @@
                             }
                         }
                     }
+
+
 
                     #indexTopTraders {
                         width: 100%;
@@ -1597,9 +1598,8 @@
                                 justify-content: space-around;
 
                                 h3 {
-                                    font-weight: 700;
-                                    font-size: 1.8rem;
-                                    color: rgb(0, 0, 0);
+                                    font-weight: 700 !important;
+                                    font-size: 1.8rem !important;
                                 }
 
                                 p {
@@ -1961,4 +1961,21 @@
             }
         }
     }
+
+    .indexChartBottomArea.dark {
+        .left {
+            .bottomArea {
+                .inner {
+                    #indexTopTraders {
+                        .singleItem {
+                            width: 49%;
+                            margin-bottom: 1.7rem;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+
 }
