responsive with javascript

--- a/resources/css/CompitionsPage/_CompitionsPage.scss
+++ b/resources/css/CompitionsPage/_CompitionsPage.scss
@@ -1512,6 +1512,19 @@
 
 
 
+
+// responsive for tablate devices
+@media only screen and (max-width: 1024px) {
+
+    
+
+}
+
+
+
+
+
+// responsive for mobile devices
 @media only screen and (max-width: 577px) {
 
 
