--- a/resources/css/_base.scss
+++ b/resources/css/_base.scss
@@ -12,6 +12,7 @@
 html {
     font-size: 48.44%;
     font-family: 'DM Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 
@@ -143,14 +144,32 @@ body.dark {
         padding: 7.5rem 1.5rem;
 
     }
+    #mainbody.expand {
+        padding: 7.5rem 1.5rem;
+
+    }
 
     footer {
         justify-content: center !important;
         margin-top: 2rem !important;
+        flex-direction: column;
 
         p {
             text-align: center;
             margin-bottom: 0.5rem;
+        }
+    }
+
+    body.dark{
+        footer {
+            justify-content: center !important;
+            margin-top: 2rem !important;
+            flex-direction: column;
+    
+            p {
+                text-align: center;
+                margin-bottom: 0.5rem;
+            }
         }
     }
 }
