delivered 2nd part successfully

--- a/resources/css/topbar/_topbar.scss
+++ b/resources/css/topbar/_topbar.scss
@@ -924,7 +924,7 @@
         right: 0;
         background-color: rgb(255, 255, 255);
         width: 100%;
-        height: 6rem;
+        height: 10rem;
         z-index: 9999999999;
         display: flex;
         justify-content: space-between;
@@ -972,9 +972,9 @@
                 display: flex;
                 align-items: center;
                 background-color: rgba(192, 192, 192, 0.11);
-                width: 25rem;
+                width: 28rem;
                 justify-content: space-between;
-                padding: .4rem;
+                padding: 1.5rem 1rem;
                 border-radius: .5rem;
                 -webkit-border-radius: .5rem;
                 -moz-border-radius: .5rem;
@@ -982,8 +982,8 @@
                 -o-border-radius: .5rem;
 
                 svg {
-                    width: 2.5rem;
-                    height: 2.5rem;
+                    width: 3rem;
+                    height: 3rem;
                     margin-right: .5rem;
 
                     path {
@@ -996,13 +996,13 @@
                     border: none;
                     background: none;
                     width: calc(100% - 4rem);
-                    font-size: 1.5rem;
+                    font-size: 1.8rem;
                 }
             }
 
             .hambarger {
-                height: 4rem;
-                width: 4rem;
+                height: 5rem;
+                width: 5rem;
                 border-radius: .6rem;
                 -webkit-border-radius: .6rem;
                 -moz-border-radius: .6rem;
@@ -1152,10 +1152,10 @@
                 margin-right: 3rem;
                 display: flex;
                 align-items: center;
-                background-color: rgba(255, 255, 255, 0.11);
-                width: 25rem;
+                background-color: rgba(160, 160, 160, 0.11);
+                width: 28rem;
                 justify-content: space-between;
-                padding: .4rem;
+                padding: 1.5rem 1rem;
                 border-radius: .5rem;
                 -webkit-border-radius: .5rem;
                 -moz-border-radius: .5rem;
@@ -1163,8 +1163,8 @@
                 -o-border-radius: .5rem;
 
                 svg {
-                    width: 2.5rem;
-                    height: 2.5rem;
+                    width: 3rem;
+                    height: 3rem;
                     margin-right: .5rem;
 
                     path {
@@ -1177,7 +1177,7 @@
                     border: none;
                     background: none;
                     width: calc(100% - 4rem);
-                    font-size: 1.5rem;
+                    font-size: 1.8rem;
                     color: #fff;
                 }
             }
