--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -4,6 +4,7 @@
 @import './IndexPage/IndexPage';
 @import './responsive/responsive';
 @import './CompitionsPage/CompitionsPage';
+@import './CryptocurrencyPage/Cryptocurrency';
 
 
 
