dark mode border removed

--- a/resources/css/CryptocurrencyPage/_Cryptocurrency.scss
+++ b/resources/css/CryptocurrencyPage/_Cryptocurrency.scss
@@ -263,6 +263,10 @@ body.dark {
                     color: rgba(255, 255, 255, 0.4);
                 }
             }
+
+            .tr:last-child{
+                border: none;
+            }
         }
 
 
